--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Domain Time Tracker</title>
+  <title>ChromeTime</title>
   <style>
     * {
       box-sizing: border-box;
@@ -127,7 +127,7 @@
   </style>
 </head>
 <body>
-  <h1>⏱️ Domain Time Tracker</h1>
+  <h1>⏱️ ChromeTime</h1>
   
   <div class="settings">
     <div class="setting-row">
